--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.6.1",
     "react-scripts": "3.0.1",
+    "uuid": "^3.3.2",
     "yarn": "^1.16.0"
   },
   "scripts": {
